PAGOSONLINEPPS-28693: Correcciónes pull request